# TP3_2019.2_CCF211

./: CMakeLists.txt  Interface.c  QuickSort_LEncadeada.c  QuickSort_LEncadeada.h  Quicksort_Arranjo.c  Quicksort_Arranjo.h  README.md  Selecao_Arranjo.c  Selecao_Arranjo.h  Selecao_ListaEncadeada.c  Selecao_ListaEncadeada.h  geracaoBib.c  geracaoBib2.c  geracao_aleatoria.c  main.c  makefile  teste
Arranjo/: TAD_Biblioteca.c  TAD_Biblioteca.h  TAD_Palavra.c  TAD_Palavra.h  TAD_Palavra.h.gch  TAD_Texto.c  TAD_Texto.h  a.out  main.c  tadPalavra.c  tadPalavra.h  tadPalavra.h.gch  tadTexto.c  tadTexto.h  tadTexto.h.gch  teste  testePalavra.c
ListaEncadeada/: TAD_Biblioteca.c  TAD_Biblioteca.h  TAD_Palavra.c  TAD_Palavra.h  TAD_Palavra.h.gch  TAD_Texto.c  TAD_Texto.h  TAD_Texto.h.gch  main.c  teste
